--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
     <!-- End Google Tag Manager -->
     
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     
     <!-- Primary Meta Tags -->
     <title>WiFi Tracker - Professional WiFi Network Geolocation & BSSID Triangulation Tool</title>
